--- a/src/blocks/intro/__title/intro__title.scss
+++ b/src/blocks/intro/__title/intro__title.scss
@@ -4,15 +4,15 @@
   margin: 0;
   width: 100%;
   overflow: hidden;
-  max-height: 61.81%;
+  max-height: 136px;
   letter-spacing: -0.03em;
 
   @media screen and (min-width: 768px) {
-    max-height: 48.25%;
+    max-height: 138px;
   }
 
   @media screen and (min-width: 1440px) {
-    max-height: 45.66%;
+    max-height: 258px;
     letter-spacing: -0.02em;
   }
 }
